# TraitorsAI

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: app.py
frontend/: package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: AgentAvatar.js  EventLog.js  GameList.js  GameViewer.js  PlaybackControls.js  RoundTable.js
src/traitors_ai/: agent.py  analysis.py  config.py  game_engine.py  graph.py  logging_utils.py  personas.py  prompts.py  runner.py  schemas.py
tests/: test_engine.py  test_schemas.py
